[package]
name = "reverse-beacon-exporter"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbn-lib = "0.1.3"
prometheus_exporter = "0.8.2"
hambands = "0.1.2"